# supabase-management-rs

./: Cargo.toml  README.md
src/: auth.rs  error.rs  lib.rs  postgres_configs.rs  project.rs  query.rs  storage.rs  supavisor.rs
tests/: integration.rs
